Обновлены стили, добавлена библиотека nouislider

--- a/src/html/category.html
+++ b/src/html/category.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elecity</title>
+  <link type="Image/x-icon" href="./favicon.ico" rel="icon">
   <link rel="stylesheet" href="./css/style.min.css">
 </head>
 
@@ -34,155 +35,7 @@
                         <li class="category__filter-item"><a class="category__filter-link" href="#">Ещё</a></li>
                     </ul>
                     <div class="category__list">
-                        <aside class="category__aside">
-                            <form class="category__form">
-                              <div class="category__widget accardion-item">
-                                  <div class="category__widget-title accardion-title">Производитель<span>(245)</span></div>
-                                  <div class="category__widget-body accardion-box">
-                                      <div class="maker">
-                                            <div class="maker__list">
-                                                <label class="maker__list-item">
-                                                    <input class="maker__checkbox" type="checkbox" name="maker-1">
-                                                    <p class="maker__list-text">Atlant<span class="maker__list-num">(33)</span></p>
-                                                </label>
-                                                <label class="maker__list-item">
-                                                    <input class="maker__checkbox" type="checkbox" name="maker-2">
-                                                    <p class="maker__list-text">Samsung<span class="maker__list-num">(57)</span></p>
-                                                </label>
-                                                <label class="maker__list-item">
-                                                    <input class="maker__checkbox" type="checkbox" name="maker-3">
-                                                    <p class="maker__list-text">LG<span class="maker__list-num">(4)</span></p>
-                                                </label>
-                                                <label class="maker__list-item">
-                                                    <input class="maker__checkbox" type="checkbox" name="maker-4">
-                                                    <p class="maker__list-text">Bosh<span class="maker__list-num">(7)</span></p>
-                                                </label>
-                                                <label class="maker__list-item">
-                                                    <input class="maker__checkbox" type="checkbox" name="maker-5">
-                                                    <p class="maker__list-text">Liebherr<span class="maker__list-num">(13)</span></p>
-                                                </label>
-                                              </div>
-                                            <a class="maker__link-all" href="#">Все 123 варианта</a>
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="category__widget accardion-item">
-                                  <div class="category__widget-title accardion-title">Цена</div>
-                                  <div class="category__widget-body accardion-box">
-                                      <div class="price">
-                                          <div class="price__range">
-                                          <div class="price__line"></div>
-                                          <div class="price__active-line"></div>
-                                          <div class="price__min-num"></div>
-                                          <div class="price__max-num"></div>
-                                          </div>
-                                          <div class="price__box">
-                                              <div class="price__box-line">
-                                                <span>от</span>
-                                                <input name="price-1" type="text" value="5680">
-                                              </div>
-                                              <div class="price__box-line">
-                                                <span>до</span>
-                                                <input name="price-2" type="text" value="150000">
-                                              </div>
-                                          </div>
-                                      </div>    
-                                  </div>
-                              </div>
-                              <div class="category__widget accardion-item">
-                                <div class="category__widget-title accardion-title">Вид холодильника<span>(245)</span></div>
-                                <div class="category__widget-body accardion-box">
-                                    <div class="view-fridge">
-                                          <div class="view-fridge__list">
-                                              <label class="view-fridge__list-item">
-                                                  <input class="view-fridge__checkbox" type="checkbox" name="view-fridge-1">
-                                                  <p class="view-fridge__text">С морозильной камерой<span class="view-fridge__num">(33)</span></p>
-                                              </label>
-                                              <label class="view-fridge__list-item">
-                                                  <input class="view-fridge__checkbox" type="checkbox" name="view-fridge-2">
-                                                  <p class="view-fridge__text">Без морозильной камеры <span class="view-fridge__num">(57)</span></p>
-                                              </label>
-                                          </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="category__widget accardion-item">
-                                <div class="category__widget-title accardion-title">Морозильная камера <span>(245)</span></div>
-                                <div class="category__widget-body accardion-box">
-                                    <div class="freezer-compartment">
-                                          <div class="freezer-compartment__list">
-                                              <label class="freezer-compartment__list-item">
-                                                  <input class="freezer-compartment__checkbox" type="checkbox" name="freezer-compartment-1">
-                                                  <p class="freezer-compartment__text">Atlant<span class="freezer-compartment__num">(33)</span></p>
-                                              </label>
-                                              <label class="freezer-compartment__list-item">
-                                                  <input class="freezer-compartment__checkbox" type="checkbox" name="freezer-compartment-2">
-                                                  <p class="freezer-compartment__text">Samsung<span class="freezer-compartment__num">(57)</span></p>
-                                              </label>
-                                              <label class="freezer-compartment__list-item">
-                                                  <input class="freezer-compartment__checkbox" type="checkbox" name="freezer-compartment-3">
-                                                  <p class="freezer-compartment__text">LG<span class="freezer-compartment__num">(4)</span></p>
-                                              </label>
-                                              <label class="freezer-compartment__list-item">
-                                                  <input class="freezer-compartment__checkbox" type="checkbox" name="freezer-compartment-4">
-                                                  <p class="freezer-compartment__text">Bosh<span class="freezer-compartment__num">(7)</span></p>
-                                              </label>
-                                              <label class="freezer-compartment__list-item">
-                                                  <input class="freezer-compartment__checkbox" type="checkbox" name="freezer-compartment-5">
-                                                  <p class="freezer-compartment__text">Liebherr<span class="freezer-compartment__num">(13)</span></p>
-                                              </label>
-                                            </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="category__widget accardion-item">
-                              <div class="category__widget-title accardion-title">Общий объем, л</div>
-                              <div class="category__widget-body accardion-box">
-                                  <div class="volume">
-                                      <div class="volume__range">
-                                      <div class="volume__line"></div>
-                                      <div class="volume__active-line"></div>
-                                      <div class="volume__min-num"></div>
-                                      <div class="volume__max-num"></div>
-                                      </div>
-                                      <div class="volume__box">
-                                          <span>от</span>
-                                          <input type="text" value="5680" name="volume-1">
-                                          <span>до</span>
-                                          <input type="text" value="150000" name="volume-2">
-                                      </div>
-                                  </div>  
-                              </div>
-                          </div>
-                          <div class="category__widget accardion-item">
-                              <div class="category__widget-title accardion-title">Высота, см</div>
-                              <div class="category__widget-body accardion-box">
-                                  <div class="height">
-                                      <div class="height__range">
-                                      <div class="height__line"></div>
-                                      <div class="height__active-line"></div>
-                                      <div class="height__min-num"></div>
-                                      <div class="height__max-num"></div>
-                                      </div>
-                                      <div class="height__box">
-                                          <span>от</span>
-                                          <input type="text" value="5680" name="height-1">
-                                          <span>до</span>
-                                          <input type="text" value="150000" name="height-2">
-                                      </div>
-                                  </div>  
-                              </div>
-                          </div>
-                          <a href="#" class="category__widget-more">Больше параметров</a>
-                          <div class="category__widget-bottom">
-                              <div class="category__widget-res">Найдено <span>23</span> товара</div>
-                              <button class="category__widget-clear" type="reset">
-                                  <img src="img/icons/garbage.svg" alt="clear">
-                              </button>
-                          </div>
-                          </form>
-                            <img class="category__aside-close" src="img/icons/close-grey.svg" alt="close">
-                        </aside>
+                        @@include('parts/_category-aside.html')
                         <div class="category__catalog">
                           <div class="category__catalog-top">
                             <div class="category__catalog-filter catalog-filter">
@@ -713,6 +566,7 @@
   <script src="./js/libs/jquery-3.6.0.min.js"></script>
   <script src="./js/libs/slick.min.js"></script>
   <script src="./js/libs/jquery.magnific-popup.min.js"></script>
+  <script src="./js/libs/nouislider.min.js"></script>
   <script src="./js/category.js"></script>
   <script src="./js/main.js"></script>
 </body>
