--- a/src/html/installation.html
+++ b/src/html/installation.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elecity</title>
+  <link type="Image/x-icon" href="./favicon.ico" rel="icon">
   <link rel="stylesheet" href="./css/style.min.css">
 </head>
 
