--- a/src/html/parts/_footer.html
+++ b/src/html/parts/_footer.html
@@ -5,7 +5,7 @@
           <li class="footer-top__column footer-top__column-info ">
             <div class="footer-top__column__box">
               <div class="footer-top__column-logo">
-                <img src="img/logo.png" alt="logo">
+                <img src="img/logo.svg" alt="logo">
               </div>
               <a class="footer-top__column-tel" href="tel:74951509555">+7(495)150-95-55</a>
               <ul class="footer-top__column-contact">
