--- a/src/html/parts/_header.html
+++ b/src/html/parts/_header.html
@@ -73,7 +73,7 @@
           </div>
           <div class="header-center">
             <a href="index.html" class="header__logo">
-              <img class="header__logo-img" src="img/logo.png" alt="logo">
+              <img class="header__logo-img" src="img/logo.svg" alt="logo">
             </a>
             <div class="header__all">
               <div class="header__all-icon">
